reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__defs__sleep.rs_line_176_col_5_001.log

*** crates/tracewake-core/src/actions/defs/sleep.rs:176:5: replace build_sleep_completion_events -> Result<Vec<EventEnvelope>, ApplyError> with Ok(vec![Default::default()])

*** mutation diff:
--- crates/tracewake-core/src/actions/defs/sleep.rs
+++ replace build_sleep_completion_events -> Result<Vec<EventEnvelope>, ApplyError> with Ok(vec![Default::default()])
@@ -168,37 +168,17 @@
     state: &PhysicalState,
     agent_state: &AgentState,
     log: &EventLog,
     sleep_started_event: &EventEnvelope,
     ordering_key: &OrderingKey,
     content_manifest_id: &ContentManifestId,
     completion_tick: SimTick,
 ) -> Result<Vec<EventEnvelope>, ApplyError> {
-    if let Some(reason) = sleep_interruption_reason(state, agent_state, sleep_started_event) {
-        return build_sleep_interruption_events(
-            agent_state,
-            sleep_started_event,
-            log,
-            ordering_key,
-            content_manifest_id,
-            completion_tick,
-            reason,
-        );
-    }
-    build_sleep_end_events(
-        agent_state,
-        sleep_started_event,
-        log,
-        ordering_key,
-        content_manifest_id,
-        completion_tick,
-        EventKind::SleepCompleted,
-        "sleep completed",
-    )
+    Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
 }
 
 fn sleep_interruption_reason(
     state: &PhysicalState,
     agent_state: &AgentState,
     sleep_started_event: &EventEnvelope,
 ) -> Option<&'static str> {
     let Some(actor_id) = sleep_started_event.actor_id.as_ref() else {


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/actions/defs/sleep.rs` has changed (1781911534.779923409s, 6s after last build at 1781911528.051923421s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/sleep.rs:176:13
    |
176 |     Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
    |             ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/sleep.rs:176:13
    |
176 |     Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
    |             ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
